# StellarCleaner

./: CHANGELOG_PERFORMANCE_OPTIMIZER.md  CMakeLists.txt  Dependencias  IMPLEMENTATION_CHECKLIST.md  KERNEL_CLEANER.md  KERNEL_CLEANER_EXAMPLES.md  KERNEL_CLEANER_SUMMARY.md  PERFORMANCE_OPTIMIZER_REFERENCE.md  PERFORMANCE_OPTIMIZER_SETUP.md  PERFORMANCE_OPTIMIZER_USAGE.md  QUICK_START.md  README.md  build.sh  run.sh
packaging/: install.sh  linuxcleaner.desktop  uninstall.sh
resources/: resources.qrc
resources/styles/: dark.qss
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/analyzer/: diskanalyzer.cpp  diskanalyzer.h
src/cleaner/: basecleaner.cpp  basecleaner.h  browsercleaner.cpp  browsercleaner.h  kernelcleaner.cpp  kernelcleaner.h  logcleaner.cpp  logcleaner.h  packagecleaner.cpp  packagecleaner.h  performancecleaner.cpp  performancecleaner.h  privacycleaner.cpp  privacycleaner.h  tempcleaner.cpp  tempcleaner.h  trashcleaner.cpp  trashcleaner.h
src/tools/: processmanager.cpp  processmanager.h  startupmanager.cpp  startupmanager.h  uninstallmanager.cpp  uninstallmanager.h
src/ui/: analyzerpage.cpp  analyzerpage.h  cleanerpage.cpp  cleanerpage.h  dashboard.cpp  dashboard.h  kernelpage.cpp  kernelpage.h  logviewer.cpp  logviewer.h  optimizerpage.cpp  optimizerpage.h  settingspage.cpp  settingspage.h  sidebar.cpp  sidebar.h  titlebar.cpp  titlebar.h  toolspage.cpp  toolspage.h
src/utils/: fileutils.cpp  fileutils.h  languagemanager.cpp  languagemanager.h  scheduler.cpp  scheduler.h  sudohelper.cpp  sudohelper.h  systeminfo.cpp  systeminfo.h
